--- a/download.html
+++ b/download.html
@@ -45,7 +45,7 @@
           <li><a href="./about.html" title=""> About</a></li>
           <li><a href="./pricing.html" title=""> Pricing </a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li>
+          <!-- <li><a href="./components.html" title="">Components</a></li> -->
           <li>
             <p>
               <a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a>
