--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./about.html" title="">About</a></li>
           <li><a href="./services.html" title="">Services</a></li>
-          <li><a href="./contact.html" title="">Contact</a></li>
+          <li><a href="./contact.html" title="">Subscribe</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li>  -->
           <!-- <li><a href="./terms15.html" title="">Terms</a></li> 
           <li><a href="./terms50.html" title="">Terms50</a></li>  -->
@@ -176,8 +176,8 @@
                             <p class="footerClassText">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="contactFooter">
-                            <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
-                            <p class="footerClassText">Goto out contact page to subscribe to our mailing list.</p>
+                            <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
+                            <p class="footerClassText">Click the subscribe button to sign up for our newsletter</p>
                         </div>
                         <div class="emailFooter">
                             <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
