--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./about.html" title="">About</a></li>
           <li><a href="./services.html" title="">Services</a></li>
-          <li><a href="./contact.html" title="">Contact</a></li>
+          <li><a href="./contact.html" title="">Subscribe</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li>  -->
         </ul>
       </div>
@@ -104,7 +104,7 @@
                         <li>keywords 2</li>
                     </ul>
                     
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=C5M5CDC5AEKJS&lc=US&item_name=5%20classes%20%2450&amount=50%2e00&currency_code=USD&button_subtype=services&bn=PP%2dBuyNowBF%3abtn_buynowCC_LG%2egif%3aNonHosted" class="btn btn-primary" title="">Click to Pay</a>
+                    <a href="terms50.html" class="btn btn-primary" title="">Click to Pay</a>
                 </div>
             </div>
             <div class="col-md-3">
@@ -178,8 +178,8 @@
                           <p class="footerClassText">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                       </div>
                       <div class="contactFooter">
-                          <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
-                          <p class="footerClassText">Goto out contact page to subscribe to our mailing list.</p>
+                          <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
+                          <p class="footerClassText">Click the subscribe button to sign up for our newsletter.</p>
                       </div>
                       <div class="emailFooter">
                           <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
