syntax and collapse menu changes

--- a/terms15.html
+++ b/terms15.html
@@ -13,10 +13,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
-  <link href="./assets/favicon.ico" rel="icon">
+  <!-- <link href="./assets/favicon.ico" rel="icon"> -->
   <link rel="icon" href="guru.png" type="image/x-icon">
   <link href="./main.a3f694c0.css" rel="stylesheet">
-  <script src="script.js"></script>
+  
 
   <title>Yoga by Elizabeth Muniot</title>  
   
@@ -159,5 +159,6 @@
   
   --> 
   <script type="text/javascript" src="./main.41beeca9.js"></script></body>
+  <script src="script.js"></script>
   
   </html>
