--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
-  <link href="./assets/favicon.ico" rel="icon">
+  <!-- <link href="./assets/favicon.ico" rel="icon"> -->
   <link rel="icon" href="guru.png" type="image/x-icon">
   <link href="./main.a3f694c0.css" rel="stylesheet">
 
