--- a/terms50.html
+++ b/terms50.html
@@ -165,6 +165,6 @@
   
   --> 
   <script type="text/javascript" src="./main.41beeca9.js"></script></body>
-  <script src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   
   </html>
