formatting, syntax updates.

--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -53,75 +53,59 @@
 
 
 
-<div class="">
+<div class="section-container">
     <div class="container">
-        <div class="row">
-
-            <div class="col-xs-12">
-               <img class="img-responsive" src="./assets/images/heroAbout.jpg">
+        <div class="row section-container-spacer">
+            <div class="col-xs-12 yogaColTop">
+                <div class="text-center">
+                    <h1>Yoga</h1>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <p>I teach interactive yoga via Zoom. I like to have a dialogue, where clients can ask questions or chime in if they need clarification about something. Zoom allows me to demonstrate a pose and get to see my students in real time, so I can give suggestions, modifications and words of encouragement. Sign up for a free Zoom class. </p>
+                    <p>I found yoga super intimidating for a long time. I took my first yoga class at the 92nd Street Y more than 20 years ago. I pretty much hated it. I didn’t feel bendy or flexible enough. Everyone around me seemed to know what was happening. I didn’t get all the chanting, and the Sanskrit. I would have rather been doing anything else, but I did feel calmer. </p>
+                    <p>After finishing grad school in 2011, I went to Costa Rica for my first yoga retreat, which I didn’t realize was a 100 hour teacher training. My science geek awoke with the anatomy lessons, and the combination of the physical/breathe/mind practice awoke a dormant spiritual interest. When I got back to DC, I completed 500 hours of training through YogaWorks. Curious? Want to know more? Email me and we can arrange a time to talk.</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</div>  
 
 <div class="section-container">
     <div class="container">
-        <div class="row">
-               <div class="col-xs-12 col-md-8 col-md-offset-2">
-                    <div class="text-center">
-                    <h1>Hello!</h1>
-                     </div>   
-                        <p class="section-container-spacer">Elizabeth Muniot specializes in developing individuals, teams and organizations committed to develop structures and processes that support long-lasting change. Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
-
-                    <div class="row section-container-spacer">
-                        <div class="col-md-6">
-                            <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
-                        </div>
-                        <div class="col-md-6">
-                            <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
-                        </div>
-                    </div>
-
-               </div>
-               
-                <div class="col-xs-12 col-md-8 col-md-offset-2">              
-                        <p> Prior to her consulting work, Elizabeth was the Assistant Director of George Mason University’s Center for Social Entrepreneurship, where she developed co-curricular activities, facilitated workshops, mentored students, and served as the Director of the Social Innovation Program. At both Share Our Strength and the Lupus Foundation of America - DMV Chapter, Elizabeth mobilized diverse volunteer networks to consistently exceed fundraising goals. Working in partnership with national corporations and nonprofits, Elizabeth has developed community service projects, which served as an integral part of strategic leadership training and team-building programs. She also served as the Director of Corporate Relations for The Arc of the United States, initiating the organization’s first media sponsorship.</p>
-                        <p> Elizabeth holds a B.A. in Political Science from Barnard College, Columbia University and a M.S. in Organization Development from the American University. She has completed more than 600 hours of yoga teacher training. She lives outside Washington, D.C. with her family.</p>
-                            <small class="signature pull-right">Elizabeth Muniot</small>
+        <div class="row section-container-spacer">
+            <div class="col-xs-12 yogaColBottom">
+                <div class="text-center">
+                    <h1>Testimonials</h1>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <p>Elizabeth gave me a new respect for yoga positions. I appreciate her hands-on approach at helping understanding yoga and the value of each move. When I do moves now, I focus on making sure I am doing them to the best of my ability and not comparing myself to others or my own self-talk! For beginners I would highly recommend her!  – Cathy L. </p>
+                    <p>She's wonderful!!! I found her very easy to talk to and work with. She has a great sense of humor too. Elizabeth is very flexible with your schedule. During my first session, she demonstrated and explained each pose. She answered all of my questions and addressed my concerns. I highly recommend her to anyone wanting to take yoga.  – Donesia M. </p>
+                    <p>As a beginner, I appreciate how Elizabeth explains each pose and the foundations of yoga, ensuring that I have good form and understand what each move is meant to do. I also appreciate that she adapts our lessons based on my needs (i.e. knee or hip issues) and is teaching me how to listen to my body.  – Graciela B.</p>
+                    <p>Elizabeth combines the spiritual lessons with the physical lessons, so it was never about "the pose," it was about how to take care of ourselves physically and spiritually. And her teachings on how the body is meant to move into and hold a pose is exquisite. I finally like yoga and have even started a daily practice.  – Jules M.</p>
                 </div>
             </div>
-
-
-
-
         </div>
-
     </div>
-
-
-
-</div>
-
-
+</div>  
 
 <footer>
   <div class="section-container footer-container">
       <div class="container">
           <div class="row">
-                  <div class="col-md-4">
-                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">About Us</h4></a>
-                      <p class="footerClassText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor</p>
+                  <div class="col-md-4 footerContainerLeft">
+                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
+                      <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
                   </div>
 
-                  <div class="col-md-4">
+                  <div class="col-md-4 footerContainerMid">
                       <h4 class="footerTitle">Visit & Share!</h4>
                       <p>
                           <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
-                        <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <!-- <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
+                        </a> -->
                         <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-linkedin" aria-hidden="true"></i>
                         </a>
@@ -132,16 +116,16 @@
                       <p><small>© Elizabeth Muniot | Website Created with Care <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
                   </div>
 
-                  <div class="col-md-4 footerContainer">
-                      <div class="classesFooter">
-                          <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Services</h4></a>
-                          <p class="footerClassText">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  <div class="col-md-4 footerContainerRight">
+                      <div class="servicesFooter">
+                          <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
+                          <p class="footerClassText">check out our list of services.</p>
+                      </div>
+                      <div class="subscribeFooter">
+                          <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
+                          <p class="footerClassText">Click the subscribe to sign up for our newsletter.</p>
                       </div>
                       <div class="contactFooter">
-                          <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                          <p class="footerClassText">Click the subscribe button to sign up for our newsletter.</p>
-                      </div>
-                      <div class="emailFooter">
                           <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
                           <p class="footerClassText">contact me directly</p>                           
                       </div>
