--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
  
 
-  <title>Yoga by Elizabeth Muniot</title> 
+  <title>Sage Change - Elizabeth Muniot</title> 
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
@@ -34,14 +34,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1">Studio</span></a>
+        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1"></span></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./about.html" title="">About</a></li>
-          <li><a href="./services.html" title="">Services</a></li>
+          <li><a href="./services.html" title="">Work with Me</a></li>
           <li><a href="./contact.html" title="">Subscribe</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li>  -->
         </ul>
