--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 
  
 
-  <title>Yoga by Elizabeth Muniot</title>  
+  <title>Sage Change - Elizabeth Muniot</title>  
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
@@ -34,14 +34,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1">Studio</span></a>
+        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1"></span></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./about.html" title="">About</a></li>
-          <li><a href="./services.html" title="">Services</a></li>
+          <li><a href="./services.html" title="">Work with Me</a></li>
           <li><a href="./contact.html" title="">Subscribe</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li>  -->
         </ul>
@@ -74,8 +74,8 @@
             <div class="col-md-3">
                 <div class="pricing-card pricing-primary pricing-first">
                     <h3>Virtual Yoga</h3>
-                    <h4 class="cardDescription">One Time Session</h4>
-                    <h6 class="price">15 <span>$/session</span></h6>
+                    <h4 class="cardDescription">Drop-in Class</h4>
+                    <h6 class="price">15 <span>$/hour</span></h6>
                 </div>
                 <div class="pricing-features">
                     <ul class="features">
@@ -109,8 +109,8 @@
             </div>
             <div class="col-md-3">
                 <div class="pricing-card pricing-secondary pricing-third">
-                    <h3>Consulting</h3>
-                    <h4 class="cardDescription">Let's Talk</h4>
+                    <h3>Private Yoga</h3>
+                    <h4 class="cardDescription">Individualized Yoga</h4>
                     <h6 class="price">85 <span>$/session</span></h6>
                 </div>
                 <div class="pricing-features">
@@ -125,9 +125,9 @@
             </div>
             <div class="col-md-3">
               <div class="pricing-card pricing-secondary pricing-fourth">
-                  <h3>Events</h3>
-                  <h4 class="cardDescription">Retreat</h4>
-                  <h6 class="price">65 <span>$/session</span></h6>
+                  <h3>Coaching Change</h3>
+                  <h4 class="cardDescription">Let's Talk</h4>
+                  <h6 class="price"> <span></span></h6>
               </div>
               <div class="pricing-features">
                   <ul class="features">
