--- a/download.html
+++ b/download.html
@@ -127,47 +127,51 @@
 
 
 <footer>
-    <div class="section-container footer-container">
-        <div class="container">
-            <div class="row">
-                    <div class="col-md-4">
-                        <h4>About us</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor</p>
-                    </div>
+  <div class="section-container footer-container">
+      <div class="container">
+          <div class="row">
+                  <div class="col-md-4 footerContainerLeft">
+                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
+                      <p class="footerClassText">Hear my story, and how we can achieve your goals.</p>
+                  </div>
 
-                    <div class="col-md-4">
-                        <h4>Do you like ? Share this !</h4>
-                        <p>
-                            <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                          </a>
-                          <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                          </a>
-                          <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                          </a>
-                        </p>
-                        <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>    
-                    </div>
+                  <div class="col-md-4 footerContainerMid">
+                      <h4 class="footerTitle">Visit & Share!</h4>
+                      <p>
+                          <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <!-- <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a> -->
+                        <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.instagram.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                      </p>
+                      <p><small>© Elizabeth Muniot | Website Created with Care <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
+                  </div>
 
-                    <div class="col-md-4">
-                        <h4>Subscribe to newsletter</h4>
-                        
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" class="form-control footer-input-text">
-                                <div class="input-group-btn">
-                                    <button type="button" class="btn btn-primary btn-newsletter ">OK</button>
-                                </div>
-                            </div>
-                        </div>
+                  <div class="col-md-4 footerContainerRight">
+                      <div class="servicesFooter">
+                          <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
+                          <p class="footerClassText">check out our list of services.</p>
+                      </div>
+                      <div class="subscribeFooter">
+                          <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
+                          <p class="footerClassText">Click the subscribe to sign up for our newsletter.</p>
+                      </div>
+                      <div class="contactFooter">
+                          <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
+                          <p class="footerClassText">contact me directly</p>                           
+                      </div>
 
-
-                    </div>
-            </div>
-        </div>
-    </div>
+                  </div>
+          </div>
+      </div>
+  </div>
 </footer>
 
 <script>
