--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div>
                         <p class="subTitle">When it’s time for change you'll know it.</p>
                         <p>It’s not always easy to make change happen. We need support from others to dig deep into ourselves and find the courage, strength, and determination to change.</p>
-                        <p>Whether you want to change habits or patterns that no longer serve you; find a new job or completely switch careers; leave a long-term relationship or become a parent, I’ll help you make the transition with power and confidence... <a href="readMoreCoach">Read More</a></p>
+                        <p>Whether you want to change habits or patterns that no longer serve you; find a new job or completely switch careers; leave a long-term relationship or become a parent, I’ll help you make the transition with power and confidence... <a href="readMoreCoach.html">Read More</a></p>
                         
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     </div>
                     <div>
                         <p class="subTitle">Develop structures and processes that support long-lasting change.</p>
-                        <p>I pair my training in organization development with more than two decades of nonprofit experience in fundraising and leadership development to help you build the capacity of your organization. I specialize in team building (board development, staff retreats), volunteer management, and fundraising... <a href="readMoreConsult">Read More</a></p> 
+                        <p>I pair my training in organization development with more than two decades of nonprofit experience in fundraising and leadership development to help you build the capacity of your organization. I specialize in team building (board development, staff retreats), volunteer management, and fundraising... <a href="readMoreConsult.html">Read More</a></p> 
                         
                     </div>
                 </div>
