--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -1,3 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <meta content="Mashup templates have been developed by Orson.io team" name="author">
+
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+  
+  <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="./assets/favicon.ico" rel="icon"> -->
+
+ 
+
+  <title>Sage Change - Elizabeth Muniot</title>  
+
+<link href="./main.a3f694c0.css" rel="stylesheet"></head>
+
+<body>
+
+ <!-- Add your content of header -->
+ <header>
+  <nav class="navbar  navbar-fixed-top navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle uarr collapsed" data-toggle="collapse" data-target="#navbar-collapse-uarr">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1"></span></a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="./index.html" title="" class="active">Home</a></li>
+          <li><a href="./about.html" title="">About</a></li>
+          <li><a href="./services.html" title="">Work with Me</a></li>
+          <li><a href="./contact.html" title="">Subscribe</a></li>
+          <!-- <li><a href="./components.html" title="">Components</a></li>  -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+
+
+
+<div class="section-container">
+    <div class="container">
+        <div class="row section-container-spacer">
+            <div class="col-xs-12 yogaColTop">
+                <div class="text-center">
+                    <h1>Coaching</h1>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <p>As your coach, I’ll help you identify your passions, deepest interests, innate gifts that truly embody who they are and will bring them genuine fulfillment, purpose, etc. I’ll ask questions, offer observations, and provide tools in support of your ability to dig deep and do the powerful work of growth and development. This is not a substitution for therapy. Email me and we can arrange a time to talk. </p>
+                    <p>I found yoga super intimidating for a long time. I took my first yoga class at the 92nd Street Y more than 20 years ago. I pretty much hated it. I didn’t feel bendy or flexible enough. Everyone around me seemed to know what was happening. I didn’t get all the chanting, and the Sanskrit. I would have rather been doing anything else, but I did feel calmer. </p>                   
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="section-container imgContainer">
+  <div class="container">
+      <div class="row">
+             <div class="col-xs-12 col-md-8 col-md-offset-2">   
+                  <div class="row section-container-spacer">
+                      <div class="col-md-6">
+                          <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
+                      </div>
+                      <div class="col-md-6">
+                          <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                      </div>
+                  </div>
+
+             </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="section-container">
+    <div class="container">
+        <div class="row section-container-spacer">
+            <div class="col-xs-12 yogaColBottom">
+                <div class="text-center">
+                    <h1>Testimonials</h1>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <p>Elizabeth’s holistic approach was critical for me and I cannot credit her enough for my professional and leadership growth. With her guidance, I have a clearer understanding of my passions; applying my skills: re-evaluating my performance; and seeking experiences – purposefully.  – Brian K.C. </p>
+                    <p>Elizabeth had a big impact on me. She is a gifted teacher with an empathic ability to read and feel into the people around you. I could feel her benevolent energy all weekend encircling me like a warm hug. She is changing people's lives, including mine. – Sarah G. </p>
+                    <p>With Elizabeth, I made a mind/body connection that will serve me for a long time. I feel good in my body and I trust it in a way I haven’t for a while. I feel beautiful again. And centered again. – Terri S.</p>                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>  
+
 <footer>
     <div class="section-container footer-container">
         <div class="container">
@@ -45,3 +153,28 @@
         </div>
     </div>
   </footer>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      navActivePage();
+    });
+  </script>
+  
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+  </script>
+  
+  -->
+  
+  <script type="text/javascript" src="./main.41beeca9.js"></script></body>
+  
+  </html>
