--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -68,7 +68,26 @@
             </div>
         </div>
     </div>
-</div>  
+</div>
+
+<div class="section-container imgContainer">
+  <div class="container">
+      <div class="row">
+             <div class="col-xs-12 col-md-8 col-md-offset-2">   
+                  <div class="row section-container-spacer">
+                      <div class="col-md-6">
+                          <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
+                      </div>
+                      <div class="col-md-6">
+                          <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                      </div>
+                  </div>
+
+             </div>
+          </div>
+      </div>
+  </div>
+</div>
 
 <div class="section-container">
     <div class="container">
@@ -155,7 +174,9 @@
   ga('send', 'pageview');
 </script>
 
---> 
+-->
+
 <script type="text/javascript" src="./main.41beeca9.js"></script></body>
 
 </html>
+
