--- a/readMoreConsult.html
+++ b/readMoreConsult.html
@@ -1,3 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <meta content="Mashup templates have been developed by Orson.io team" name="author">
+
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+  
+  <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="./assets/favicon.ico" rel="icon"> -->
+
+ 
+
+  <title>Sage Change - Elizabeth Muniot</title>  
+
+<link href="./main.a3f694c0.css" rel="stylesheet"></head>
+
+<body>
+
+ <!-- Add your content of header -->
+ <header>
+  <nav class="navbar  navbar-fixed-top navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle uarr collapsed" data-toggle="collapse" data-target="#navbar-collapse-uarr">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1"></span></a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="./index.html" title="" class="active">Home</a></li>
+          <li><a href="./about.html" title="">About</a></li>
+          <li><a href="./services.html" title="">Work with Me</a></li>
+          <li><a href="./contact.html" title="">Subscribe</a></li>
+          <!-- <li><a href="./components.html" title="">Components</a></li>  -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+
+
+<div class="section-container">
+    <div class="container">
+        <div class="row section-container-spacer">
+            <div class="col-xs-12 yogaColTop">
+                <div class="text-center">
+                    <h1>Consulting</h1>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <p>As your coach, I’ll help you identify your passions, deepest interests, innate gifts that truly embody who they are and will bring them genuine fulfillment, purpose, etc. I’ll ask questions, offer observations, and provide tools in support of your ability to dig deep and do the powerful work of growth and development. This is not a substitution for therapy. Email me and we can arrange a time to talk. </p>                   
+                </div>
+            </div>
+        </div>
+    </div>
+</div> 
+
+<div class="section-container imgContainer">
+  <div class="container">
+      <div class="row">
+             <div class="col-xs-12 col-md-8 col-md-offset-2">   
+                  <div class="row section-container-spacer">
+                      <div class="col-md-6">
+                          <img class="img-responsive" src="./assests/images/consult1.jpg">
+                      </div>
+                      <div class="col-md-6">
+                          <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                      </div>
+                  </div>
+
+             </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="section-container">
+    <div class="container">
+        <div class="row section-container-spacer">
+            <div class="col-xs-12 yogaColBottom">
+                <div class="text-center">
+                    <h1>Testimonials</h1>
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <p>Elizabeth is a born leader, who demonstrates innovation, inspiration and motivation in every project she undertakes. Her passion and drive inspired me greatly. Elizabeth empowers those around her to reach past their perceived limitations – she serves by example to bring out the best in [others]. –Michael Farver </p>
+                    <p>My experience working with Elizabeth was that she was a powerful, connected organizer who could cut through the various opinions and agendas, and create a consensus that everyone could agree -- and take action -- on. Her can-do spirit, good humor, and clarity of vision makes her a clear example of someone who keeps their eye on the objective while everyone involved enthusiastic and empowered. – Adam Lamb                   
+                </div>
+            </div>
+        </div>
+    </div>
+</div>  
+
+
+
+
 <footer>
     <div class="section-container footer-container">
         <div class="container">
@@ -45,3 +153,28 @@
         </div>
     </div>
   </footer>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      navActivePage();
+    });
+  </script>
+  
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+  </script>
+  
+  -->
+  
+  <script type="text/javascript" src="./main.41beeca9.js"></script></body>
+  
+  </html>
