--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -76,10 +76,10 @@
              <div class="col-xs-12 col-md-8 col-md-offset-2">   
                   <div class="row section-container-spacer">
                       <div class="col-md-6">
-                          <img class="img-responsive" src="./assets/images/aboutImg1.jpg">
+                          <img class="img-responsive" src="./assets/images/coaching1.png">
                       </div>
                       <div class="col-md-6">
-                          <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                          <img class="img-responsive" src="./assets/images/coaching2.jpg">
                       </div>
                   </div>
 
