--- a/readMoreConsult.html
+++ b/readMoreConsult.html
@@ -74,10 +74,10 @@
              <div class="col-xs-12 col-md-8 col-md-offset-2">   
                   <div class="row section-container-spacer">
                       <div class="col-md-6">
-                          <img class="img-responsive" src="./assests/images/consult1.jpg">
+                          <img class="img-responsive" src="./assets/images/consult2.png">
                       </div>
                       <div class="col-md-6">
-                          <img class="img-responsive" src="./assets/images/aboutImg2.jpg">
+                          <img class="img-responsive" src="./assets/images/consult3.png">
                       </div>
                   </div>
 
