--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 </div>
 
-<div class="section-container border-section-container">
+<div class="section-container border-section-container section-container-home">
     <div class="container">
             <div class="row">
                 <div class="col-md-12 section-container-spacer">
@@ -124,7 +124,7 @@
     </div>
 </div>
 
-<div class="section-container background-color-container white-text-container">
+<div class="section-container background-color-container white-text-container banner-container">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
