--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
 
 
 
-<div class="section-container">
+<div class="section-container card-container">
     <div class="container">
         <div class="row section-container-spacer">
             <div class="col-xs-12">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 ">
                 <div class="pricing-card pricing-primary pricing-first">
                     <h3>Virtual Yoga</h3>
                     <h4 class="cardDescription">Drop-in Class</h4>
