--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                             <h3>Subscribe</h3>
                         </div>
                         <div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium amet voluptates assumenda modi sapiente neque nam.</p>
+                            <p>Please fill out the form and click subscribe to gain access to newsletters and notifications about Sage Change. Thank you for your time and we appreciate your business. </p>
                         </div>
                        
                     </div>
@@ -145,7 +145,7 @@
                       </div>
                       <div class="subscribeFooter">
                           <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                          <p class="footerClassText">Click the subscribe to sign up for our newsletter.</p>
+                          <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
                       </div>
                       <div class="contactFooter">
                           <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
