--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 col-container">
                     <div class="fa-container">
                         <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -87,7 +87,7 @@
                         <h3>Yoga</h3>
                     </div>
                     <div>
-                        <p class="subTitle">We’ll move. We’ll breathe. Two things you do all the time, every day. It’s simple. I promise.</p>
+                        <p class="subTitle">Online group classes and private instruction.</p>
                         <p>I was intimidated by yoga for a long time, but -- as cliché as it sounds -- yoga changed my life, so I am passionate about sharing it with others.</p>
                         <p>You think you’re not bendy or flexible enough for yoga. Yoga is woo-woo hippie crap. You want to check it out, but you don’t know where to get started... <a href="readMoreYoga.html">Read More</a></p>
                     </div>
@@ -100,7 +100,7 @@
                         <h3>Coaching</h3>
                     </div>
                     <div>
-                        <p class="subTitle">When it’s time for change you'll know it.</p>
+                        <p class="subTitle">Identify and remove barriers that get in the way of unlocking your potential.</p>
                         <p>It’s not always easy to make change happen. We need support from others to dig deep into ourselves and find the courage, strength, and determination to change.</p>
                         <p>Whether you want to change habits or patterns that no longer serve you; find a new job or completely switch careers; leave a long-term relationship or become a parent, I’ll help you make the transition with power and confidence... <a href="readMoreCoach.html">Read More</a></p>
                         
@@ -114,7 +114,7 @@
                         <h3>Consulting</h3>
                     </div>
                     <div>
-                        <p class="subTitle">Develop structures and processes that support long-lasting change.</p>
+                        <p class="subTitle">Build a more effective team, board or organization.</p>
                         <p>I pair my training in organization development with more than two decades of nonprofit experience in fundraising and leadership development to help you build the capacity of your organization. I specialize in team building (board development, staff retreats), volunteer management, and fundraising... <a href="readMoreConsult.html">Read More</a></p> 
                         
                     </div>
@@ -176,7 +176,7 @@
                         </div>
                         <div class="subscribeFooter">
                             <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                            <p class="footerClassText">Click the subscribe to sign up for our newsletter.</p>
+                            <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
                         </div>
                         <div class="contactFooter">
                             <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
