--- a/services.html
+++ b/services.html
@@ -78,11 +78,11 @@
                     <h6 class="price">15 <span>$/hour</span></h6>
                 </div>
                 <div class="pricing-features">
-                    <ul class="features">
+                    <!-- <ul class="features">
                         <li>Increase Flexability</li>
                         <li>Improve Energy</li>
                         <li>Balanced Metabolism</li>
-                    </ul>
+                    </ul> -->
 
                     <a href="terms15.html" class="btn btn-primary" title="">Click to Pay</a>
                      
@@ -97,12 +97,12 @@
                     <h6 class="price">50 <span>$/total</span></h6>
                 </div>
                 <div class="pricing-features">
-                    <ul class="features">
+                    <!-- <ul class="features">
                         <li>Establish a fitness routine</li>
                         <li>Healthy Living</li>
                         <li>keywords 1</li>
                         <li>keywords 2</li>
-                    </ul>
+                    </ul> -->
                     
                     <a href="terms50.html" class="btn btn-primary" title="">Click to Pay</a>
                 </div>
@@ -114,12 +114,12 @@
                     <h6 class="price">85 <span>$/session</span></h6>
                 </div>
                 <div class="pricing-features">
-                    <ul class="features">
+                    <!-- <ul class="features">
                       <li>Executive Coaching</li>
                       <li>Fundraising + Development</li>
                       <li>Board Development</li>
                       <li>Team Building + Staff Retreats </li>
-                    </ul>
+                    </ul> -->
                     <a href="contact.html" class="btn btn-primary" title="">Contact Me</a>
                 </div>
             </div>
@@ -130,11 +130,11 @@
                   <h6 class="price"> <span></span></h6>
               </div>
               <div class="pricing-features">
-                  <ul class="features">
+                  <!-- <ul class="features">
                       <li>Gravida arcu ac tortor dignissim convallis aenean</li>
                       <li>Gravida arcu ac tortor dignissim convallis aenean</li>
                       <li>Gravida arcu ac tortor dignissim</li>
-                  </ul>
+                  </ul> -->
                   <a href="contact.html" class="btn btn-primary" title="">Contact Me</a>
               </div>
           </div>
@@ -179,7 +179,7 @@
                       </div>
                       <div class="subscribeFooter">
                           <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                          <p class="footerClassText">Click the subscribe to sign up for our newsletter.</p>
+                          <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
                       </div>
                       <div class="contactFooter">
                           <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
