--- a/terms50.html
+++ b/terms50.html
@@ -131,7 +131,7 @@
                       </div>
                       <div class="subscribeFooter">
                           <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                          <p class="footerClassText">Click the subscribe to sign up for our newsletter.</p>
+                          <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
                       </div>
                       <div class="contactFooter">
                           <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
