--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="row">
            
             <div class="col-md-6">
-                <h1 id="firstName2">Elizabeth Muniot<span id="studioName2"></span></h1>
-                <p class="responsePad" id="titleDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <h1 id="firstName2">Sage Change<span id="studioName2"></span></h1>
+                <p class="responsePad" id="titleDescription"><small class="signature pull-right">your partner for intentional transitions</small></p>
             </div>
 
         </div>
@@ -129,11 +129,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="text-center">
-                    <h2>Special Events Can Go Here</h2>
-                    <p> Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta non
-                        pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus. Turpis
-                        egestas pretium aenean pharetra magna ac. Id cursus metus aliquam eleifend mi. </p>
-                    <a href="./services.html" title="" class="btn btn-primary btn-lg">Click Here</a>
+                    <h2>Featured Events</h2>
+                    <p class="eventDescription"> Please subscribe below to hear more about upcoming events and workshops. </p>
+                    <a href="./contact.html" title="" class="btn btn-primary btn-lg">Click Here</a>
                 </div>
             </div>
         </div>
@@ -151,8 +149,8 @@
                     </div>
   
                     <div class="col-md-4 footerContainerMid">
-                        <h4 class="footerTitle">Visit & Share!</h4>
-                        <p>
+                        <h4 class="footerTitleMid">Visit & Share!</h4>
+                        <p class="shareLinks">
                             <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                           </a>
@@ -166,7 +164,11 @@
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                           </a>
                         </p>
-                        <p><small>© Elizabeth Muniot | Website Created with Care <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
+                      <div class="footerLinkMid">  
+                        <p><small>© Elizabeth Muniot 2020</small</p> 
+                        <p class="footerLink1"><small>Website Created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
+                        <p class="footerLink2"><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p> 
+                      </div>    
                     </div>
   
                     <div class="col-md-4 footerContainerRight">
@@ -179,8 +181,8 @@
                             <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
                         </div>
                         <div class="contactFooter">
-                            <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">elizabethmuniot@gmail</h4></a>
-                            <p class="footerClassText">contact me directly</p>                           
+                            <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
+                            <p class="footerClassText">leave me a message</p>                           
                         </div>
   
                     </div>
