--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url('./assets/images/heroImg4.jpg')">
+<div class="white-text-container background-image-container" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
     <div class="container">
         <div class="row">
            
-            <div class="col-md-6">
+            <div class="col-md-6 heroTitle">
                 <h1 id="firstName2">Sage Change<span id="studioName2"></span></h1>
                 <p class="responsePad" id="titleDescription"><small class="signature pull-right">your partner for intentional transitions</small></p>
             </div>
